--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,12 +1,15 @@
 .nav {
     grid-area: n;
     background-color: blueviolet;
+    padding: 20px;
 }
 
 .item {
     color: white;
+    text-decoration: none;
 }
 
-.item.active {
+.active {
     color: gold;
+    text-decoration: none;
 }
