feat: add avatars

--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -4,7 +4,7 @@
 }
 
 .dialogsItems {
-padding: 10px;
+    padding: 10px;
 }
 
 .dialogsItems .active {
@@ -12,9 +12,15 @@ padding: 10px;
 }
 
 .messages {
-padding: 10px;
+    padding: 10px;
 }
 
 .messages .message {
 
+}
+
+.avatar {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
 }
